<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started_with_your_account"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="32dp" />

        <!-- Email Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp" />

        <!-- First Name Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp" />

        <!-- Last Name Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_last_name"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp" />

        <!-- Date of Birth Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8px"
            android:text="@string/date_of_birth"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:padding="16dp" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:padding="16dp" />

    </LinearLayout>

</ScrollView>